--- a/pages/index.html
+++ b/pages/index.html
@@ -22,8 +22,8 @@
 
         </div>
         <div class="dashboard">
-            <button class="btn btn--reject"><img src="/assets/reject_icon.png" alt="reject button" width="20px" height="auto"></button>
-            <button class="btn btn--heart"><img src="/assets/heart_icon.png" alt="heart button" width="20px" height="auto"></button>
+            <button id='reject' class="btn btn--reject"><img src="/assets/reject_icon.png" alt="reject button" width="20px" height="auto"></button>
+            <button id='like' class="btn btn--heart"><img src="/assets/heart_icon.png" alt="heart button" width="20px" height="auto"></button>
         </div>
 
     </Main>
