--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <img src="/assets/Intersect.png" alt="profile_icon" width="20px" height="auto">
-            <button class="btn" type="button"><img src="/assets/Group 221paw.png" alt="dog paw" width="20px" height="auto"></button>
+            <button class="btn btn--reset" type="button"><img src="/assets/Group 221paw.png" alt="dog paw" width="20px" height="auto"></button>
             <img src="/assets/Icon.png" alt="chat_icon" width="20px" height="auto">
         </nav>
     </header>
@@ -24,6 +24,7 @@
         <div class="dashboard">
             <button id='reject' class="btn btn--reject"><img src="/assets/reject_icon.png" alt="reject button" width="20px" height="auto"></button>
             <button id='like' class="btn btn--heart"><img src="/assets/heart_icon.png" alt="heart button" width="20px" height="auto"></button>
+
         </div>
 
     </Main>
