base layout styles

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,30 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="/index.js" type="module" ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/index.css">
     <title>Tindog</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <img src="/assets/Intersect.png" alt="profile_icon" width="20px" height="auto">
-            <button class="btn btn--reset" type="button"><img src="/assets/Group 221paw.png" alt="dog paw" width="20px" height="auto"></button>
-            <img src="/assets/Icon.png" alt="chat_icon" width="20px" height="auto">
-        </nav>
-    </header>
+    <div class="container">
+        <header>
+            <nav>
+                <img src="/assets/Intersect.png" alt="profile_icon" width="20px" height="auto">
+                <button class="btn btn--reset" type="button"><img src="/assets/Group 221paw.png" alt="dog paw" width="20px" height="auto"></button>
+                <img src="/assets/Icon.png" alt="chat_icon" width="20px" height="auto">
+            </nav>
+        </header>
 
-    <Main>
-        <div id="profile">
+        <Main>
+            <div id="profile">
 
-        </div>
-        <div class="dashboard">
-            <button id='reject' class="btn btn--reject"><img src="/assets/reject_icon.png" alt="reject button" width="20px" height="auto"></button>
-            <button id='like' class="btn btn--heart"><img src="/assets/heart_icon.png" alt="heart button" width="20px" height="auto"></button>
+            </div>
+            <div class="dashboard">
+                <button id='reject' class="btn btn--reject"><img src="/assets/reject_icon.png" alt="reject button" width="25px" height="auto"></button>
+                <button id='like' class="btn btn--heart"><img src="/assets/heart_icon.png" alt="heart button" width="40px" height="auto"></button>
 
-        </div>
+            </div>
 
-    </Main>
-
+        </Main>
+    </div>
     <footer>
     </footer>
     
