--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
     <script defer src="/index.js" type="module" ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/index.css">
     <title>Tindog</title>
 </head>
